# NL2SQL

./: README_CN.md  create_dummy_db.py  main.py  pyproject.toml  school.db
deepeye/: __init__.py  checkers.py  core.py  generators.py  schema_linking.py  selection.py  utils.py  value_retrieval.py
paper/: document.md
