[project]
name = "nl2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "markitdown[all]>=0.0.2",
    "openai>=2.8.1",
    "sqlglot>=28.0.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.12.0",
]
